--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-body {
+.body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
 
-textarea {
+.textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -18,7 +18,7 @@ textarea {
   background-color: transparent;
   color: black;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 20px solid black;
 }
 
 .description {
@@ -43,17 +43,17 @@ textarea {
 }
 
 .past {
-  background-color: #949494;
+  background-color: rgb(212, 64, 64);
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #6bd66b;
   color: white;
 }
 
